# tongki.dev

./: Cargo.toml  README.md  bun.lockb  package.json  tsconfig.json
src/: index.tsx  main.rs  routes.rs
src/middlewares/: index_middleware.rs  mod.rs
src/routes/: routes.rs
static/css/: mini-default.min.css  style.css
templates/: 404.html  index.hbs  index.html
