[package]
name = "tongki-dev"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = "0.8.4"
fake = "4.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = {version = "1.45.1", features= ["full"]}
tower-http = {version = "0.6.5", features = ["fs", "trace"]}
